# project_one

./: .gitignore
.cursor/skills/project-base-rules/: SKILL.md
benchmark/: CMakeLists.txt  README.md  STRESS_TEST_GUIDE.md  fix-dll.bat  run_stress_test.bat  run_stress_test.sh  stress_client.c
client/: README.md
ge/: BUILD.md  BUILD_LINUX.md  BUILD_MSYS2.md  CMakeLists.txt  QUICKSTART.md  README.md  TROUBLESHOOTING.md  build-linux.sh  build-msys2.sh  build.bat  build.ps1  copy-output.bat  copy-output.sh
ge/.cache/clangd/index/: async.c.25CDE507B9A29117.idx  async.c.2E6AFE8E36BA6EEF.idx  core.c.6058B24C1CDC250E.idx  core.c.BBB872D98AE4C3DE.idx  detect-wakeup.c.7DD59011333DCDCB.idx  detect-wakeup.c.F7E65C3D6561FC0B.idx  dl.c.6FFE444EAAF0998F.idx  dl.c.97073A52EB606A0A.idx  errno.h.87A6CE1DD28689C1.idx  errno.h.9502B499E6C18B65.idx  error.c.1F6CD709AB7932B4.idx  error.c.E2E47FD71AE1DB02.idx  fs-event.c.16578027E8236896.idx  fs-event.c.3EAAB4B8B04749F3.idx  fs-fd-hash-inl.h.368CDE444E0F8CD5.idx  fs-fd-hash-inl.h.93C7CF1CB6E47DF1.idx  fs-poll.c.4337584303D1634C.idx  fs-poll.c.CFB539FB0B9DD1E0.idx  fs.c.D1147B193D10BA38.idx  fs.c.EBD79E963ED0ECA4.idx  getaddrinfo.c.8D5E8A1CA94687FD.idx  getaddrinfo.c.BCCB732DFACE8C04.idx  getnameinfo.c.D87A40D6417C5857.idx  getnameinfo.c.D8D9166FE40490A2.idx  handle-inl.h.35720A9F3B0DF8C6.idx  handle-inl.h.93FE05AAC5CC7B25.idx  handle.c.42775C0C788085A9.idx  handle.c.4447AD7105D02C57.idx  heap-inl.h.80FE83336138B973.idx  heap-inl.h.9B61C02DBDF099C9.idx  idna.c.6E06CA160C22BE06.idx  idna.c.E07AFB0A0DFB9089.idx  idna.h.615D4623DBA6B6B1.idx  idna.h.CEFACFD465CA4161.idx  inet.c.11DEDB4242217D87.idx  inet.c.4BF9F53B59876C0C.idx  internal.h.BE7F81A533D92598.idx  internal.h.EF3A4B9AE616FD75.idx  loop-watcher.c.0A358B6434B1DFD5.idx  loop-watcher.c.A4984EFC958E03F9.idx  (+72 more)
ge/client/: CMakeLists.txt  README.md  client.c  client.h  client_lua_bindings.c  client_main.c
ge/cmake/: fix-libbson.cmake  mongo-cmake-helpers.cmake  skip-libbson-install.cmake
ge/example/: example_callback.lua
ge/example/example_client/: chat_client.lua
ge/example/example_server/: README.md  chat_server.lua
ge/libbson/: CMakeLists.txt
ge/libbson/src/common/src/mlib/: cmp.h  config.h  duration.h  intencode.h  loop.h  test.h  time_point.h
ge/libuv/include/uv/: version.h
ge/lua/: BUILD_WINDOWS.md  README_WINDOWS.md  build.bat  build.ps1  build_vs.bat
ge/src/: CMakeLists.txt  CODE_REVIEW.md  bson_handler.c  lua_bindings.c  main.c  server.c  server.h
pub/: READ.md
server/: README.md
